@startuml
hide circle
skinparam shadowing false
skinparam linetype ortho

title EstoquePro - Diagrama Entidade-Relacionamento

entity "AUTH_USER" as AUTH_USER {
  * id : BIGINT <<PK>>
  --
  * username : VARCHAR(150) <<UQ>>
  * password : VARCHAR(128)
  * is_superuser : BOOLEAN
}

entity "PERFIL_USUARIO" as PERFIL_USUARIO {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * tipo : VARCHAR(20)
}

entity "FORNECEDOR" as FORNECEDOR {
  * id : BIGINT <<PK>>
  --
  * nome : VARCHAR(100)
  * contato : VARCHAR(100)
  * cidade : VARCHAR(100)
  * criado_em : DATETIME
}

entity "PRODUTO" as PRODUTO {
  * id : BIGINT <<PK>>
  --
  * nome : VARCHAR(100)
  * categoria : VARCHAR(20)
  * subcategoria : VARCHAR(20)
  * marca : VARCHAR(100)
  * sku : VARCHAR(50) <<UQ>>
  * fornecedor_id : BIGINT <<FK, NULL>>
  * preco_custo : DECIMAL(10,2) <<NULL>>
  * preco_venda : DECIMAL(10,2)
  * estoque_minimo : INT
  * criado_em : DATETIME
}

entity "VARIACAO" as VARIACAO {
  * id : BIGINT <<PK>>
  --
  * produto_id : BIGINT <<FK>>
  * cor : VARCHAR(50) <<NULL>>
  * tamanho : VARCHAR(2) <<NULL>>
  * numeracao : VARCHAR(2) <<NULL>>
  * saldo_atual : INT
  * criado_em : DATETIME
}

entity "MOVIMENTACAO" as MOVIMENTACAO {
  * id : BIGINT <<PK>>
  --
  * variacao_id : BIGINT <<FK>>
  * tipo : VARCHAR(10)
  * quantidade : INT
  * observacao : TEXT <<NULL>>
  * fornecedor_id : BIGINT <<FK, NULL>>
  * responsavel_id : BIGINT <<FK, NULL>>
  * data_referencia : DATE
  * data : DATETIME
}

entity "PEDIDO_VENDA" as PEDIDO_VENDA {
  * id : BIGINT <<PK>>
  --
  * cliente_nome : VARCHAR(120)
  * status : VARCHAR(20)
  * criado_por_id : BIGINT <<FK, NULL>>
  * criado_em : DATETIME
  * atualizado_em : DATETIME
}

entity "PEDIDO_VENDA_ITEM" as PEDIDO_VENDA_ITEM {
  * id : BIGINT <<PK>>
  --
  * pedido_id : BIGINT <<FK>>
  * variacao_id : BIGINT <<FK>>
  * quantidade : INT
  * preco_unitario : DECIMAL(10,2)
  * movimentacao_saida_id : BIGINT <<FK, NULL>>
}

AUTH_USER ||--|| PERFIL_USUARIO : possui
AUTH_USER ||--o{ MOVIMENTACAO : registra
AUTH_USER ||--o{ PEDIDO_VENDA : cria

FORNECEDOR ||--o{ PRODUTO : fornece
FORNECEDOR ||--o{ MOVIMENTACAO : identifica

PRODUTO ||--o{ VARIACAO : possui
VARIACAO ||--o{ MOVIMENTACAO : gera
PEDIDO_VENDA ||--|{ PEDIDO_VENDA_ITEM : contém
VARIACAO ||--o{ PEDIDO_VENDA_ITEM : compõe
MOVIMENTACAO ||--o{ PEDIDO_VENDA_ITEM : baixa

note bottom of PRODUTO
  fornecedor_id é opcional.
end note

note bottom of MOVIMENTACAO
  fornecedor_id e responsavel_id
  também são opcionais.
end note

note bottom of PEDIDO_VENDA_ITEM
  A relação com movimentacao_saida_id
  liga o item à baixa automática do estoque.
end note

@enduml
